Revert First/LastFieldValueUpdateProcessorFactory to singletonList
These processors may receive null field values from SolrInputField, so
List.of() would throw NPE. Use Collections.singletonList() with
@SuppressForbidden to preserve null-tolerant behavior.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>