@@ -19,8 +19,10 @@ package org.apache.solr.update.processor;
 import static org.apache.solr.update.processor.FieldMutatingUpdateProcessor.SELECT_NO_FIELDS;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.SortedSet;
+import org.apache.solr.common.util.SuppressForbidden;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.update.processor.FieldMutatingUpdateProcessor.FieldNameSelector;
 
@@ -47,6 +49,7 @@ import org.apache.solr.update.processor.FieldMutatingUpdateProcessor.FieldNameSe
 public final class LastFieldValueUpdateProcessorFactory
     extends FieldValueSubsetUpdateProcessorFactory {
 
+  @SuppressForbidden(reason = "singletonList allows null field values")
   @Override
   public <T> Collection<T> pickSubset(Collection<T> values) {
 
@@ -65,7 +68,7 @@ public final class LastFieldValueUpdateProcessorFactory
       }
     }
 
-    return List.of(result);
+    return Collections.singletonList(result);
   }
 
   @Override
